fixed image overlapping nav
added z index 1 to sticky nav bar style

--- a/week3/style.css
+++ b/week3/style.css
@@ -33,6 +33,7 @@ header {
 /* Navigation Styles */
 
 .sticky-nav {
+    z-index: 1;
     top: 0;
     position: sticky;
     background-color: #111;
